tools/find-mac/build/log/idf_py_stdout_output_45906
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/jowallace/Dev/CloudMAV/tools/find-mac/build/bootloader/esp-idf/esptool_py && /Users/jowallace/.espressif/python_env/idf5.4_py3.13_env/bin/python /Users/jowallace/esp/v5.4/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/jowallace/Dev/CloudMAV/tools/find-mac/build/bootloader/bootloader.bin
Bootloader binary size 0x5210 bytes. 0x2df0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/Users/jowallace/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4-1-g6b7b8ea3d2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/jowallace/Dev/CloudMAV/tools/find-mac/build/config -I/Users/jowallace/Dev/CloudMAV/tools/find-mac/main -I/Users/jowallace/esp/v5.4/esp-idf/components/newlib/platform_include -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/config/include -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/config/include/freertos -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/config/xtensa/include -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/esp_additions/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/include/soc -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/dma/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/ldo/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/heap/include -I/Users/jowallace/esp/v5.4/esp-idf/components/heap/tlsf -I/Users/jowallace/esp/v5.4/esp-idf/components/log/include -I/Users/jowallace/esp/v5.4/esp-idf/components/soc/include -I/Users/jowallace/esp/v5.4/esp-idf/components/soc/esp32s3 -I/Users/jowallace/esp/v5.4/esp-idf/components/soc/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/soc/esp32s3/register -I/Users/jowallace/esp/v5.4/esp-idf/components/hal/platform_port/include -I/Users/jowallace/esp/v5.4/esp-idf/components/hal/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/hal/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_rom/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_rom/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_rom/esp32s3 -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_common/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_system/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_system/port/soc -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_system/port/include/private -I/Users/jowallace/esp/v5.4/esp-idf/components/xtensa/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/xtensa/include -I/Users/jowallace/esp/v5.4/esp-idf/components/xtensa/deprecated_include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/include/apps -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/include/apps/sntp -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/lwip/src/include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/port/include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/port/freertos/include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_wifi/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_wifi/include/local -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_event/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_phy/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_phy/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_netif/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/jowallace/Dev/CloudMAV/tools/find-mac=. -fmacro-prefix-map=/Users/jowallace/esp/v5.4/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c
/Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c: In function 'app_main':
/Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c:8:24: error: implicit declaration of function 'esp_check' [-Wimplicit-function-declaration]
    8 |     esp_err_t result = esp_check(esp_wifi_get_mac(WIFI_IF_STA, mac));
      |                        ^~~~~~~~~
ninja: build stopped: subcommand failed.
